--- a/Web1/plantillas/static/Amici.css
+++ b/Web1/plantillas/static/Amici.css
@@ -48,115 +48,140 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: calc(((100% - 940px) / 2) + 218px);
-    margin-left: calc(((100% - 940px) / 2) + 341px);
+    width: auto;
+    margin-top: 119px;
+    margin-right: calc(((100% - 940px) / 2) + 175px);
+    margin-left: calc(((100% - 940px) / 2) + 384px);
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: calc(((100% - 940px) / 2) + 341px);
-    margin-right: calc(((100% - 940px) / 2) + 218px);
+    width: auto;
+    margin-top: 35px;
+    margin-right: calc(((100% - 940px) / 2) + 175px);
+    margin-left: calc(((100% - 940px) / 2) + 384px);
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: calc(((100% - 940px) / 2) + 241px);
+    margin-top: 56px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
-    margin-right: calc(((100% - 720px) / 2) + 318px);
-    margin-left: calc(((100% - 720px) / 2));
+    width: auto;
+    margin-right: calc(((100% - 720px) / 2) + 291px);
+    margin-left: calc(((100% - 720px) / 2) + 27px);
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: calc(((100% - 720px) / 2) + 108px);
-    margin-left: calc(((100% - 720px) / 2) + 231px);
+    margin-top: 111px;
+    margin-right: calc(((100% - 720px) / 2) + -34px);
+    margin-left: calc(((100% - 720px) / 2) + 373px);
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: calc(((100% - 720px) / 2) + 231px);
-    margin-right: calc(((100% - 720px) / 2) + 108px);
+    margin-top: 23px;
+    margin-right: calc(((100% - 720px) / 2) + -34px);
+    margin-left: calc(((100% - 720px) / 2) + 373px);
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: calc(((100% - 720px) / 2) + 21px);
+    margin-top: 46px;
+    margin-right: calc(((100% - 720px) / 2) + 168px);
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-image-1 {
+    height: 76px;
+    left: auto;
+    bottom: auto;
+    right: auto;
+    top: auto;
+    margin: 0 auto 0 calc(((100% - 540px) / 2) + -76px);
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 365px;
+    margin-top: 35px;
+    margin-bottom: 0;
+    width: auto;
+    left: auto;
+    bottom: auto;
+    right: auto;
+    top: auto;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-right: calc(((100% - 540px) / 2) + 138px);
-    margin-left: calc(((100% - 540px) / 2));
+    width: 402px;
+    margin-top: -465px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: calc(((100% - 540px) / 2) + 18px);
-    margin-left: calc(((100% - 540px) / 2) + 141px);
+    margin-top: 35px;
+    margin-right: calc(((100% - 540px) / 2) + 103px);
+    margin-left: calc(((100% - 540px) / 2) + 146px);
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: calc(((100% - 540px) / 2) + 141px);
-    margin-right: calc(((100% - 540px) / 2) + 18px);
+    margin-top: 325px;
+    margin-right: calc(((100% - 540px) / 2) + 19px);
+    margin-left: calc(((100% - 540px) / 2) + 43px);
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: calc(((100% - 540px) / 2));
+    margin-top: 11px;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 247px;
+    min-height: 565px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 248px;
-    height: 246px;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    top: auto;
-    margin: 0 0 0 auto;
+    width: 605px;
+    height: 71px;
+    margin-left: calc(((100% - 340px) / 2) + -215px);
   }
 
   .u-section-1 .u-image-2 {
-    width: 167px;
-    height: 246px;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    top: auto;
-    margin: -246px auto 0 0;
+    height: 321px;
+    width: 415px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.375rem;
     width: auto;
-    margin-top: -229px;
-    margin-right: calc(((100% - 340px) / 2) + 170px);
-    margin-left: calc(((100% - 340px) / 2) + -37px);
+    margin-top: -373px;
+    margin-right: calc(((100% - 340px) / 2) + -35px);
+    margin-left: calc(((100% - 340px) / 2) + 35px);
+    font-size: 1.875rem;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 17px;
-    margin-right: calc(((100% - 340px) / 2) + -117px);
-    margin-left: calc(((100% - 340px) / 2) + 117px);
+    margin-top: 30px;
+    margin-right: calc(((100% - 340px) / 2) + 86px);
+    margin-left: calc(((100% - 340px) / 2) + 68px);
   }
 
   .u-section-1 .u-text-3 {
-    font-size: 0.75rem;
-    width: auto;
-    margin-top: 2px;
-    margin-right: calc(((100% - 340px) / 2) + 36px);
-    margin-left: calc(((100% - 340px) / 2) + 117px);
+    width: 325px;
+    margin-top: 271px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
     font-size: 0.625rem;
-    margin-top: 9px;
-    margin-bottom: 47px;
-    margin-left: calc(((100% - 340px) / 2) + 117px);
-    padding: 8px 8px 8px 7px;
+    margin-bottom: 19px;
+    margin-left: calc(((100% - 340px) / 2) + 83px);
+    padding: 20px 45px 21px 44px;
   }
 }
