--- a/Web1/plantillas/static/Amici.css
+++ b/Web1/plantillas/static/Amici.css
@@ -1,187 +1,741 @@
- .u-section-1 {
-  min-height: 681px;
-}
-
-.u-section-1 .u-image-1 {
-  width: 666px;
-  left: auto;
-  right: 0;
-}
-
-.u-section-1 .u-image-2 {
-  width: 511px;
-  left: 0;
-  right: auto;
+.u-section-1 .u-sheet-1 {
+  min-height: 450px;
 }
 
 .u-section-1 .u-text-1 {
-  font-weight: 700;
-  font-size: 3rem;
-  margin: 23px calc(((100% - 1140px) / 2) + 727px) 0 calc(((100% - 1140px) / 2) + 11px);
+  font-size: 4.5rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 70px auto 0 49px;
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: 700;
-  margin: 169px calc(((100% - 1140px) / 2) + 318px) 0 calc(((100% - 1140px) / 2) + 441px);
+  font-size: 3rem;
+  margin: -10px auto 0 49px;
 }
 
 .u-section-1 .u-text-3 {
   font-size: 1.25rem;
-  margin: 15px calc(((100% - 1140px) / 2) + 318px) 0 calc(((100% - 1140px) / 2) + 441px);
+  margin: 17px 769px 0 49px;
 }
 
 .u-section-1 .u-btn-1 {
   --radius: 50px;
-  text-transform: uppercase;
-  font-size: 1.25rem;
-  letter-spacing: 1px;
   background-image: none;
+  font-size: 1.5rem;
   font-weight: 700;
-  margin: 53px auto 60px calc(((100% - 1140px) / 2) + 441px);
-  padding: 19px 34px 20px 33px;
+  margin: 30px auto 0 49px;
+  padding: 10px 42px 10px 41px;
+}
+
+.u-section-1 .u-image-1 {
+  width: 520px;
+  height: 428px;
+  margin: -381px 0 11px auto;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 400px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-right: calc(((100% - 940px) / 2) + 538px);
-    margin-left: calc(((100% - 940px) / 2));
+    width: auto;
+    margin-top: 43px;
+    margin-left: 39px;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 2.875rem;
     width: auto;
-    margin-top: 119px;
-    margin-right: calc(((100% - 940px) / 2) + 175px);
-    margin-left: calc(((100% - 940px) / 2) + 384px);
+    margin-top: 10px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 35px;
-    margin-right: calc(((100% - 940px) / 2) + 175px);
-    margin-left: calc(((100% - 940px) / 2) + 384px);
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 56px;
-    margin-left: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-right: calc(((100% - 720px) / 2) + 291px);
-    margin-left: calc(((100% - 720px) / 2) + 27px);
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 111px;
-    margin-right: calc(((100% - 720px) / 2) + -34px);
-    margin-left: calc(((100% - 720px) / 2) + 373px);
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 23px;
-    margin-right: calc(((100% - 720px) / 2) + -34px);
-    margin-left: calc(((100% - 720px) / 2) + 373px);
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 46px;
-    margin-right: calc(((100% - 720px) / 2) + 168px);
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-image-1 {
-    height: 76px;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    top: auto;
-    margin: 0 auto 0 calc(((100% - 540px) / 2) + -76px);
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 365px;
-    margin-top: 35px;
-    margin-bottom: 0;
-    width: auto;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    top: auto;
-  }
-
-  .u-section-1 .u-text-1 {
-    width: 402px;
-    margin-top: -465px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 35px;
-    margin-right: calc(((100% - 540px) / 2) + 103px);
-    margin-left: calc(((100% - 540px) / 2) + 146px);
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 325px;
-    margin-right: calc(((100% - 540px) / 2) + 19px);
-    margin-left: calc(((100% - 540px) / 2) + 43px);
+    margin-top: 10px;
+    margin-right: 569px;
   }
 
   .u-section-1 .u-btn-1 {
     margin-top: 11px;
-    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 460px;
+    height: 379px;
+    margin-top: -346px;
+    margin-right: -37px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 345px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 4rem;
+    margin-top: 23px;
+    margin-left: 11px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 2.375rem;
+    margin-top: 0;
+    margin-left: 11px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 18px;
+    margin-right: 387px;
+    margin-left: 11px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 20px;
+    margin-left: 45px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 327px;
+    height: 316px;
+    margin-top: -316px;
+    margin-right: -50px;
+    margin-bottom: 19px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 50vw;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3.75rem;
+    margin-left: 37px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 2.25rem;
+    margin-left: 37px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 13px;
+    margin-right: 125px;
+    margin-left: 93px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 0;
+    margin-left: 130px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 263px;
+    height: 328px;
+    margin: 12px auto 5px 131px;
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-1 {
-    min-height: 565px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 605px;
-    height: 71px;
-    margin-left: calc(((100% - 340px) / 2) + -215px);
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 321px;
-    width: 415px;
-    margin-top: 0;
-    margin-right: auto;
-    margin-left: 0;
+  .u-section-1 .u-sheet-1 {
+    min-height: 501px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: -373px;
-    margin-right: calc(((100% - 340px) / 2) + -35px);
-    margin-left: calc(((100% - 340px) / 2) + 35px);
-    font-size: 1.875rem;
+    font-size: 2.375rem;
+    margin-top: 22px;
+    margin-left: 32px;
+    margin-right: 32px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 30px;
-    margin-right: calc(((100% - 340px) / 2) + 86px);
-    margin-left: calc(((100% - 340px) / 2) + 68px);
+    font-size: 1.5rem;
+    margin-top: 9px;
+    margin-left: 23px;
+    margin-right: 23px;
   }
 
   .u-section-1 .u-text-3 {
-    width: 325px;
-    margin-top: 271px;
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 0.875rem;
+    margin-top: 9px;
+    margin-right: 19px;
+    margin-left: 55px;
   }
 
   .u-section-1 .u-btn-1 {
-    font-size: 0.625rem;
-    margin-bottom: 19px;
-    margin-left: calc(((100% - 340px) / 2) + 83px);
-    padding: 20px 45px 21px 44px;
+    font-size: 1.25rem;
+    margin-top: 7px;
+    margin-left: auto;
+    padding: 3px 13px 4px 11px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 229px;
+    height: 286px;
+    margin-top: 9px;
+    margin-left: auto;
+    margin-bottom: 9px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 462px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin-top: 33px;
+  margin-bottom: 3px;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 426px;
+  background-image: linear-gradient(to right, #ffcc00, #ffdf00);
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 0;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 3.75rem;
+  font-weight: 700;
+  margin: 37px 37px 0 23px;
+}
+
+.u-section-2 .u-icon-1 {
+  width: 37px;
+  height: 37px;
+  margin: 61px auto 0 58px;
+  padding: 8px;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.25rem;
+  margin: -35px 268px 0 96px;
+}
+
+.u-section-2 .u-icon-2 {
+  width: 37px;
+  height: 37px;
+  margin: 13px auto 0 58px;
+  padding: 8px;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1.25rem;
+  margin: -36px 58px 0 96px;
+}
+
+.u-section-2 .u-icon-3 {
+  width: 37px;
+  height: 37px;
+  margin: 20px auto 0 58px;
+  padding: 8px;
+}
+
+.u-section-2 .u-text-4 {
+  font-size: 1.25rem;
+  margin: -35px 245px 0 96px;
+}
+
+.u-section-2 .u-text-5 {
+  font-size: 1.25rem;
+  margin: 15px 259px 0 96px;
+}
+
+.u-section-2 .u-icon-4 {
+  width: 37px;
+  height: 37px;
+  margin: -32px auto 0 58px;
+  padding: 8px;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 426px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 0;
+}
+
+.u-section-2 .u-text-6 {
+  font-size: 3.75rem;
+  width: 337px;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-7 {
+  font-size: 1.5rem;
+  margin: 0 238px 0 215px;
+}
+
+.u-section-2 .u-text-8 {
+  font-size: 3rem;
+  margin: 3px auto 0 161px;
+}
+
+.u-section-2 .u-text-9 {
+  font-size: 1.5rem;
+  margin: 0 239px 0 215px;
+}
+
+.u-section-2 .u-text-10 {
+  font-size: 3rem;
+  margin: 5px auto 0 161px;
+}
+
+.u-section-2 .u-text-11 {
+  font-size: 1.5rem;
+  margin: 0 240px 0 215px;
+}
+
+.u-section-2 .u-text-12 {
+  font-size: 1.5rem;
+  margin: 10px 160px 0 137px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 408px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 396px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 29px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: 25px;
+    margin-left: 27px;
+  }
+
+  .u-section-2 .u-text-2 {
+    width: auto;
+    margin-top: -32px;
+    margin-right: 195px;
+    margin-left: 69px;
+  }
+
+  .u-section-2 .u-icon-2 {
+    margin-top: 15px;
+    margin-left: 27px;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: auto;
+    margin-top: -45px;
+    margin-right: 14px;
+    margin-left: 69px;
+  }
+
+  .u-section-2 .u-icon-3 {
+    margin-top: 23px;
+    margin-left: 27px;
+  }
+
+  .u-section-2 .u-text-4 {
+    width: auto;
+    margin-top: -34px;
+    margin-right: 175px;
+    margin-left: 66px;
+  }
+
+  .u-section-2 .u-text-5 {
+    width: auto;
+    margin-top: 21px;
+    margin-right: 181px;
+    margin-left: 73px;
+  }
+
+  .u-section-2 .u-icon-4 {
+    margin-top: -37px;
+    margin-left: 27px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 396px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-right: 188px;
+    margin-left: 165px;
+  }
+
+  .u-section-2 .u-text-8 {
+    width: auto;
+    margin-top: 0;
+    margin-left: 116px;
+  }
+
+  .u-section-2 .u-text-9 {
+    width: auto;
+    margin-top: -7px;
+    margin-right: 190px;
+    margin-left: 164px;
+  }
+
+  .u-section-2 .u-text-10 {
+    width: auto;
+    margin-top: 0;
+    margin-left: auto;
+  }
+
+  .u-section-2 .u-text-11 {
+    width: auto;
+    margin-top: 6px;
+    margin-right: 190px;
+    margin-left: 165px;
+  }
+
+  .u-section-2 .u-text-12 {
+    width: auto;
+    margin-top: 0;
+    margin-right: 142px;
+    margin-left: 116px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 365px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 354px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 3rem;
+    margin-top: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: -37px;
+    margin-right: 121px;
+    margin-left: 53px;
+  }
+
+  .u-section-2 .u-icon-2 {
+    margin-top: 21px;
+    margin-left: 10px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-top: -50px;
+    margin-right: -43px;
+    margin-left: 53px;
+  }
+
+  .u-section-2 .u-icon-3 {
+    margin-top: 6px;
+    margin-left: 10px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-right: 105px;
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 12px;
+    margin-right: 118px;
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-icon-4 {
+    margin-top: -34px;
+    margin-left: 10px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    min-height: 354px;
+  }
+
+  .u-section-2 .u-text-6 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: 10px;
+    margin-right: 45px;
+    margin-left: 55px;
+  }
+
+  .u-section-2 .u-text-7 {
+    width: auto;
+    margin-top: 6px;
+    margin-right: 130px;
+    margin-left: 113px;
+  }
+
+  .u-section-2 .u-text-8 {
+    font-size: 2.625rem;
+    margin-left: 73px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-top: -4px;
+    margin-right: 135px;
+    margin-left: 109px;
+  }
+
+  .u-section-2 .u-text-10 {
+    font-size: 2.625rem;
+    margin-left: 78px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-top: -6px;
+    margin-right: 132px;
+    margin-left: 113px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-right: 109px;
+    margin-left: 91px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 642px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 268px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 7px;
+    margin-right: 56px;
+    margin-left: 36px;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: 23px;
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 78px;
+    margin-left: 96px;
+  }
+
+  .u-section-2 .u-icon-2 {
+    margin-top: 13px;
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-top: -37px;
+    margin-right: -86px;
+    margin-left: 96px;
+  }
+
+  .u-section-2 .u-icon-3 {
+    margin-top: 12px;
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-top: -37px;
+    margin-right: 55px;
+    margin-left: 96px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 15px;
+    margin-right: 68px;
+    margin-left: 96px;
+  }
+
+  .u-section-2 .u-icon-4 {
+    margin-left: 46px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 360px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 27px;
+    margin-left: 33px;
+    margin-right: 33px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-top: 15px;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-right: 186px;
+    margin-left: 167px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-top: -7px;
+    margin-right: 215px;
+    margin-left: 196px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-right: 186px;
+    margin-left: 153px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-top: 0;
+    margin-right: 130px;
+    margin-left: 115px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-top: 5px;
+    margin-right: 110px;
+    margin-left: 90px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 562px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 1px;
+    margin-bottom: 14px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 283px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: 18px;
+    margin-left: 13px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: -34px;
+    margin-right: -56px;
+    margin-left: 56px;
+  }
+
+  .u-section-2 .u-icon-2 {
+    margin-top: 22px;
+    margin-left: 13px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-top: -46px;
+    margin-right: 13px;
+    margin-left: 56px;
+  }
+
+  .u-section-2 .u-icon-3 {
+    margin-top: -1px;
+    margin-left: 13px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-top: -34px;
+    margin-right: -56px;
+    margin-left: 56px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 19px;
+    margin-right: -56px;
+    margin-left: 56px;
+  }
+
+  .u-section-2 .u-icon-4 {
+    margin-top: -32px;
+    margin-left: 13px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 265px;
+  }
+
+  .u-section-2 .u-text-6 {
+    font-size: 1.875rem;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-top: 6px;
+    margin-right: 30px;
+    margin-left: 13px;
+  }
+
+  .u-section-2 .u-text-8 {
+    font-size: 1.5rem;
+    margin-right: 86px;
+    margin-left: 73px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-top: 7px;
+    margin-right: 114px;
+    margin-left: 97px;
+  }
+
+  .u-section-2 .u-text-10 {
+    font-size: 1.5rem;
+    margin-top: 3px;
+    margin-right: 86px;
+    margin-left: 78px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-right: 30px;
+    margin-left: 15px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-top: 0;
+    margin-right: 63px;
+    margin-left: 50px;
   }
 }
