--- a/Web1/plantillas/static/Contactanos.css
+++ b/Web1/plantillas/static/Contactanos.css
@@ -55,20 +55,89 @@
   height: 100%;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 517px;
+  }
+
+  .u-section-1 .u-form-1 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-social-icons-1 {
+    width: 146px;
+    margin-right: 294px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 563px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 3rem;
+    width: auto;
+    margin-right: 16px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-form-1 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-social-icons-1 {
+    margin-top: -71px;
+    margin-right: 172px;
+    margin-bottom: 60px;
+  }
+}
+
 @media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: 9px;
+    margin-right: 149px;
+    margin-left: 187px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 2.25rem;
+    margin-top: -18px;
+    margin-right: 0;
+  }
+
   .u-section-1 .u-form-1 {
     width: 540px;
+    margin-top: -1px;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .u-section-1 .u-social-icons-1 {
+    margin-top: -65px;
+    margin-right: 68px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-text-1 {
+    margin-top: 0;
+    margin-right: 40px;
+    margin-left: 97px;
+  }
+
   .u-section-1 .u-text-2 {
-    font-size: 3rem;
+    font-size: 1.875rem;
+    margin-top: -8px;
   }
 
   .u-section-1 .u-form-1 {
     width: 340px;
+  }
+
+  .u-section-1 .u-social-icons-1 {
+    margin-right: 41px;
   }
 }
