--- a/Web1/plantillas/static/Simulador.css
+++ b/Web1/plantillas/static/Simulador.css
@@ -1,30 +1,63 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 716px;
+  min-height: 50vw;
 }
 
 .u-section-1 .u-text-1 {
   font-size: 4.5rem;
   font-weight: 700;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
-  margin: -8px 262px 0 234px;
+  margin: 0 262px 0 234px;
 }
 
 .u-section-1 .u-form-1 {
-  height: 333px;
+  height: 139px;
   background-image: linear-gradient(#ff9200, #ffc100);
   --radius: 29px;
+  --thumb-color: #fffd00;
+  --thumb-hover-color: #fffd00;
+  --track-color: #ff00bd;
+  --track-active-color: #fffd00;
+  --thumb-border-width: 8px;
+  --thumb-border-color: #fffd00;
+  --number-width: 765px;
   width: 797px;
-  margin: 0 auto;
+  margin: 10px auto 0;
+}
+
+.u-section-1 .u-form-group-1 {
+  --progress: 0%;
+  margin-left: 0;
+  margin-bottom: 10px !important;
+  margin-top: 0 !important;
 }
 
 .u-section-1 .u-label-1 {
-  font-weight: 700;
   font-size: 1.25rem;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.u-section-1 .u-input-1 {
+  height: 47px;
+  font-weight: 600;
+  background-image: none;
+  --radius: 50px;
+}
+
+.u-section-1 .u-form-group-2 {
+  margin-left: 0;
 }
 
 .u-section-1 .u-label-2 {
-  font-weight: 700;
   font-size: 1.25rem;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.u-section-1 .u-input-2 {
+  font-weight: 600;
+  background-image: none;
+  --radius: 50px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -41,7 +74,7 @@
   background-image: linear-gradient(#ff9200, #f0c830);
   --radius: 29px;
   height: auto;
-  margin: 9px auto 19px;
+  margin: 22px auto 26px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -88,205 +121,194 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
-    width: 672px;
-    margin-left: 134px;
     margin-right: 162px;
+    margin-left: 134px;
   }
 
   .u-section-1 .u-group-1 {
     height: auto;
   }
-
-  .u-section-1 .u-shape-1 {
-    --radius: 10px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
-    margin-left: 24px;
     margin-right: 52px;
+    margin-left: 24px;
   }
 
   .u-section-1 .u-form-1 {
-    width: 720px;
+    height: 312px;
+    --number-width: 640px;
+    width: 672px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 10px;
-    margin-bottom: 17px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 672px;
+    margin-top: 17px;
+    margin-bottom: 32px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-top: 22px;
-    margin-right: 332px;
+    margin-top: 10px;
     margin-left: 13px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: -48px;
-    margin-right: 35px;
+    margin-top: -11px;
+    margin-right: 37px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: -5px;
-    margin-right: 113px;
-    margin-left: 506px;
+    margin-top: -10px;
+    margin-right: 108px;
+    margin-left: 463px;
   }
 
   .u-section-1 .u-text-5 {
     width: auto;
-    margin-top: -7px;
-    margin-right: 22px;
-    margin-left: 429px;
+    margin-top: -9px;
+    margin-right: 34px;
+    margin-left: 389px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
     margin-top: 0;
-    margin-right: 105px;
-    margin-left: 498px;
+    margin-right: 100px;
+    margin-left: 456px;
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: -119px;
-    margin-left: 32px;
+    margin-top: -150px;
+    margin-left: 27px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 861px;
+  .u-section-1 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-right: 67px;
+    margin-left: 37px;
   }
 
+  .u-section-1 .u-form-1 {
+    --number-width: 480px;
+    width: 510px;
+  }
+
+  .u-section-1 .u-group-1 {
+    min-height: 189px;
+    width: 506px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.5rem;
+    margin-top: 19px;
+    margin-left: 10px;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-size: 1.125rem;
+    margin-top: -29px;
+    margin-right: 0;
+    margin-left: 292px;
+  }
+
+  .u-section-1 .u-text-4 {
+    font-size: 1.875rem;
+    margin-top: 1px;
+    margin-right: 65px;
+    margin-left: 340px;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-size: 1.125rem;
+    margin-right: 17px;
+    margin-left: 292px;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 1.875rem;
+    margin-top: 1px;
+    margin-right: 65px;
+    margin-left: 340px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    width: 272px;
+    height: 94px;
+    margin-top: -111px;
+    margin-left: 5px;
+  }
+}
+
+@media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    font-size: 3.75rem;
-    width: 540px;
-    margin-top: 0;
+    font-size: 2.25rem;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-form-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-group-1 {
-    min-height: 393px;
-    margin-top: 15px;
-    margin-bottom: 38px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-bottom: 30px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 9px;
-    margin-right: 105px;
-    margin-left: 92px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 118px;
-    margin-right: auto;
-    margin-left: 119px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: -9px;
-    margin-right: 230px;
-    margin-left: 208px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: -1px;
-    margin-right: 152px;
-    margin-left: 129px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-right: 218px;
-    margin-left: 205px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 343px;
-    margin-top: -300px;
-    margin-left: 92px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 826px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 3rem;
+    --number-width: 315px;
     width: 340px;
-    line-height: 1;
+  }
+
+  .u-section-1 .u-form-group-1 {
+    margin-bottom: 10px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 365px;
-    margin-bottom: 30px;
-    width: auto;
+    min-height: 234px;
+    margin-top: 11px;
+    margin-bottom: 15px;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 9px;
-    padding-bottom: 9px;
+    width: auto;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.5rem;
-    margin-top: 8px;
-    margin-right: 0;
-    margin-left: 32px;
+    font-size: 1.25rem;
+    margin-right: 163px;
   }
 
   .u-section-1 .u-text-3 {
-    width: 258px;
-    margin-top: 133px;
-    margin-left: auto;
+    margin-top: -64px;
+    margin-right: 10px;
+    margin-left: 195px;
   }
 
   .u-section-1 .u-text-4 {
-    width: 102px;
-    margin-top: -13px;
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 1.25rem;
+    margin-top: -1px;
+    margin-right: 43px;
+    margin-left: 196px;
   }
 
   .u-section-1 .u-text-5 {
     margin-top: 0;
-    margin-right: 35px;
-    margin-left: 53px;
+    margin-right: -6px;
+    margin-left: 196px;
   }
 
   .u-section-1 .u-text-6 {
-    margin-top: -9px;
-    margin-right: 119px;
-    margin-left: 104px;
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-right: 45px;
+    margin-left: 195px;
   }
 
   .u-section-1 .u-shape-1 {
-    width: 308px;
-    margin-top: -289px;
-    margin-left: auto;
+    width: 159px;
+    height: 85px;
+    margin-top: -103px;
+    margin-left: 10px;
   }
 }
