--- a/Web1/plantillas/static/nicepage.css
+++ b/Web1/plantillas/static/nicepage.css
@@ -45847,7 +45847,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 69px;
+  min-height: 63px;
 }
 
 .u-header .u-menu-1 {
@@ -45856,7 +45856,8 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-header .u-nav-1 {
   font-size: 1rem;
-  letter-spacing: normal;
+  letter-spacing: 0px;
+  font-weight: 700;
 }
 
 .u-header .u-nav-2 {
@@ -45864,13 +45865,19 @@ a.u-link.u-text-hover-grey-90:hover {
   font-weight: 600;
   letter-spacing: normal;
 }
-@media (max-width: 1199px) {
-  .u-header .u-sheet-1 {
-    min-height: 54px;
-  }
 
+.u-header .u-text-1 {
+  font-weight: 700;
+  margin: -29px 32px 12px auto;
+}
+@media (max-width: 1199px) {
   .u-header .u-menu-1 {
     width: auto;
+  }
+
+  .u-header .u-text-1 {
+    margin-top: -29px;
+    margin-right: 32px;
   }
 }
 
